# personaliz-ai-assistant

./: AUDIT_CHECKLIST.md  LICENSE  PROGRESS.md  README.md  SETUP.md  package-lock.json  package.json  setup.ps1  setup.sh
public/: agent_engine.py  openclaw_logic.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  hashtag_agent.py  openclaw_logic.py  tauri.conf.json
src-tauri/src/: db.rs  main.rs  scheduler.rs
src/components/: AgentCreationModal.tsx  ApprovalModal.tsx  Onboarding.tsx  refinements.css
src/services/: ollamaService.ts  openClawService.ts
src/styles/: AgentCreationModal.css  Onboarding.css
